[workspace]

members = [
  "glean-core",
  "glean-core/rlb",
  "glean-core/bundle",
  "glean-core/bundle-android",
  "glean-core/build",
  "samples/rust",
  "tools/embedded-uniffi-bindgen",
]

default-members = [
  "glean-core",
  "glean-core/rlb",
  "tools/embedded-uniffi-bindgen",
]

[profile.release]
opt-level = "s"
debug = false
lto = true

[patch.crates-io]
uniffi = { git = "https://github.com/mozilla/uniffi-rs" }
uniffi_core = { git = "https://github.com/mozilla/uniffi-rs" }
uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs" }
uniffi_testing = { git = "https://github.com/mozilla/uniffi-rs" }
uniffi_build = { git = "https://github.com/mozilla/uniffi-rs" }
